--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
     "content_scripts": [
         {
-          "matches": ["*://*/*"],
+          "matches": ["https://facebook.com/*"],
           "all_frames": true,
           "js": ["contentScript.js"]
         }
